src/test/testFiles/valid/transpose.val
fun transpose_array(original: Array<Array<number>>, transpose: Array<Array<number>>) {
    for i in range(3) {
        for j in range(2) {
            transpose[i][j]=original[j][i];
        }
    }
}

let original = Array<Array<number>>(2,3){[1,2,3],[4,5,6]};
let transpose = Array<Array<number>>(3, 2);
transpose_array(original, transpose);