src/test/testFiles/invalid/semanticErrors/voidTypeDeclaration.val
fun func2(x: number) {
    let z: number = x + 1;
}

let z = func2(5);